; ModuleID = '/home/carl/AnghaBench/nanomsg/tools/extr_options.c_nn_option_requires.c'
source_filename = "/home/carl/AnghaBench/nanomsg/tools/extr_options.c_nn_option_requires.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_parse_context = type { i8**, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"%s: Option\00", align 1
@.str.1 = private unnamed_addr constant [49 x i8] c"requires at least one of the following options:\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nn_parse_context*, i32)* @nn_option_requires to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nn_option_requires(%struct.nn_parse_context* %0, i32 %1) #0 {
  %3 = alloca %struct.nn_parse_context*, align 8
  %4 = alloca i32, align 4
  store %struct.nn_parse_context* %0, %struct.nn_parse_context** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @stderr, align 4
  %6 = load %struct.nn_parse_context*, %struct.nn_parse_context** %3, align 8
  %7 = getelementptr inbounds %struct.nn_parse_context, %struct.nn_parse_context* %6, i32 0, i32 0
  %8 = load i8**, i8*** %7, align 8
  %9 = getelementptr inbounds i8*, i8** %8, i64 0
  %10 = load i8*, i8** %9, align 8
  %11 = call i32 (i32, i8*, ...) @fprintf(i32 %5, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %10)
  %12 = load %struct.nn_parse_context*, %struct.nn_parse_context** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @stderr, align 4
  %15 = call i32 @nn_print_option(%struct.nn_parse_context* %12, i32 %13, i32 %14)
  %16 = load i32, i32* @stderr, align 4
  %17 = call i32 (i32, i8*, ...) @fprintf(i32 %16, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.1, i64 0, i64 0))
  %18 = load %struct.nn_parse_context*, %struct.nn_parse_context** %3, align 8
  %19 = load %struct.nn_parse_context*, %struct.nn_parse_context** %3, align 8
  %20 = getelementptr inbounds %struct.nn_parse_context, %struct.nn_parse_context* %19, i32 0, i32 1
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = load i32, i32* %4, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @nn_print_requires(%struct.nn_parse_context* %18, i32 %26)
  %28 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32 @nn_print_option(%struct.nn_parse_context*, i32, i32) #1

declare dso_local i32 @nn_print_requires(%struct.nn_parse_context*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
